# fullhouse-engine

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  demo.py  requirements.txt  run_tournament.py  sandbox.sh
.claude/: settings.json
bots/Linglingletsgo_balanced_shark/: bot.py
bots/Linglingletsgo_calling_station/: bot.py
bots/Linglingletsgo_dominic/: bot.py
bots/Linglingletsgo_dominic/data/: blueprint.json
bots/Linglingletsgo_maniac/: bot.py
bots/Linglingletsgo_nit/: bot.py
bots/Linglingletsgo_overfolder/: bot.py
bots/Linglingletsgo_pot_bluffer/: bot.py
bots/Linglingletsgo_short_stack_shove/: bot.py
bots/Littleguygabe_aof/: bot.py
bots/Littleguygabe_mybot/: bot.py
bots/Littleguygabe_mybot/data/: RFI.json
bots/Pav1602_skantbot/: bot.py
bots/Pav1602_skantbot2/: bot.py
bots/Pav1602_skantbot3/: bot (1).py
bots/Pav1602_skantbot4/: bot.py
bots/TobyCoad_bluff_heavy/: bot.py
bots/TobyCoad_loose_aggressive/: bot.py
bots/TobyCoad_loose_passive/: bot.py
bots/TobyCoad_master/: bot.py
bots/TobyCoad_position_exploiter/: bot.py
bots/TobyCoad_pure_pot_odds/: bot.py
bots/TobyCoad_random_bot/: bot.py
bots/TobyCoad_stack_pressure/: bot.py
bots/TobyCoad_tight_aggressive/: bot.py
bots/TobyCoad_tight_passive/: bot.py
bots/TobyCoad_trap_slow_player/: bot.py
bots/aggressor/: bot.py
bots/anti_monte_carlo/: bot.py
bots/cfr_equity_v28/: bot.py
bots/cfr_equity_v28/data/: equity_matrix.npy  preflop_cfr_strategy.json  removal_weights.npy
bots/mathematician/: bot.py
bots/neel/: bot.py
bots/neel_chipmax/: bot.py
bots/neel_hybrid_plus/: bot.py
bots/neel_mit_plus/: bot.py
bots/neel_pressure/: bot.py
bots/neel_range_tracker/: bot.py
bots/neel_robust_hybrid/: bot.py
bots/neel_v2/: bot.py
bots/neel_v2_harmonic/: bot.py
bots/neel_v2_riskgate/: bot.py
bots/neel_v3_enum/: bot.py
bots/neel_v3_gemini/: bot.py
bots/neel_v4_profile/: bot.py
bots/neel_v5_partition/data/: risk_profile.json
bots/neel_v6_digest/: bot.py
bots/neel_v6_digest/data/: postflop_solver_digest.json
bots/neel_v6_oppprofile/: bot.py
bots/neel_v6_sweep_000/: perturbation_manifest.json
bots/neel_v6_sweep_000/data/: cfr_action_profile.json  risk_profile.json
bots/neel_v6_sweep_001/: perturbation_manifest.json
bots/neel_v6_sweep_001/data/: cfr_action_profile.json  risk_profile.json
bots/neel_v6_sweep_002/: perturbation_manifest.json
bots/neel_v6_sweep_002/data/: cfr_action_profile.json  risk_profile.json
bots/neel_v6_sweep_003/: bot.py  perturbation_manifest.json
bots/neel_v6_sweep_003/data/: OPEN_SOURCE_NOTES.txt  cfr_action_profile.json  risk_profile.json
bots/neel_v6_sweep_004/: perturbation_manifest.json
bots/neel_v6_sweep_004/data/: cfr_action_profile.json  preflop_blueprint.json  risk_profile.json
bots/neel_v6_sweep_005/: perturbation_manifest.json
bots/neel_v6_sweep_005/data/: cfr_action_profile.json  risk_profile.json
bots/neel_v6_sweep_006/: perturbation_manifest.json
bots/neel_v6_sweep_006/data/: cfr_action_profile.json  risk_profile.json
bots/neel_v6_sweep_007/: perturbation_manifest.json
bots/neel_v6_sweep_007/data/: cfr_action_profile.json  risk_profile.json
bots/neel_v6_sweep_008/: perturbation_manifest.json
bots/neel_v6_sweep_009/: perturbation_manifest.json
bots/neel_v6_sweep_010/: perturbation_manifest.json
bots/neel_v6_sweep_011/: perturbation_manifest.json
bots/neel_v6_sweep_012/: perturbation_manifest.json
bots/neel_v6_sweep_013/: perturbation_manifest.json
bots/neel_v6_sweep_014/: perturbation_manifest.json
bots/neel_v6_sweep_015/: perturbation_manifest.json
bots/neel_v6_sweep_016/: perturbation_manifest.json
bots/neel_v6_sweep_017/: perturbation_manifest.json
bots/neel_v6_sweep_018/: perturbation_manifest.json
bots/neel_v6_sweep_019/: perturbation_manifest.json
bots/neel_v6_sweep_020/: perturbation_manifest.json
bots/neel_v6_sweep_021/: perturbation_manifest.json
bots/neel_v6_sweep_022/: perturbation_manifest.json
bots/neel_v6_sweep_023/: perturbation_manifest.json
bots/neel_v6_sweep_024/: perturbation_manifest.json
bots/neel_v6_sweep_025/: perturbation_manifest.json
bots/neel_v6_sweep_026/: perturbation_manifest.json
bots/neel_v6_sweep_027/: perturbation_manifest.json
bots/neel_v6_sweep_028/: perturbation_manifest.json
bots/neel_v6_sweep_029/: perturbation_manifest.json
bots/patch_anti_maniac/: bot.py
bots/patch_preflop_tighter/: bot.py
bots/patch_preflop_wider/: bot.py
bots/patch_river_tighter/: bot.py
bots/ref_bot_2/: bot.py
bots/rexheng/: __init__.py  bot.py  decide.py  params.py
bots/rexheng/blueprint/: postflop.py  (+1 more)
bots/saroopjagdev_mybot/: bot.py
bots/shark/: bot.py
bots/template/: bot.py
bots/the_house/: bot.py
bots/vlad/: CFR_PLAN.md  IMPROVEMENT_PLAN.md  bot.py
bots/vlad/deep_cfr_cpp/: CMakeLists.txt
bots/vlad/deep_cfr_cpp/src/: binding.cpp  card.hpp  config.hpp  engine.cpp  engine.hpp  features.cpp  features.hpp  hand_eval.cpp  mccfr.cpp  mccfr.hpp  network.cpp  network.hpp  reservoir.hpp  train.cpp
bots/vlad_gto_150_iters/: bot.py
db/: schema.sql
deep_cfr/: config.py  export.py  train.py
deep_cfr_cpp/: CMakeLists.txt  CUDA_PLAN.md
deep_cfr_cpp/src/: binding.cpp  binding_cuda.cpp  config.hpp  features.cpp  features.hpp  hand_eval.hpp  mccfr.cpp  mccfr.hpp  network.cpp  network.hpp  network_cuda.cu  network_cuda.cuh  reservoir.hpp  train.hpp
engine/: game.py  tournament.py
preflop_cfr/: abstraction.py  cards.py  cfr.py  config.py  equity.py  export.py  game.py  gen_rudimentary.py  hu_equity_table.npz  shared_table.py  train.py  verify_table.py
sandbox/: Dockerfile  match.py  runner.py  validator.py
tests/: golden_bot.json  test_anti_punt.py  test_board_texture.py  test_bot_golden.py  test_cbet_bluff.py  test_cuda_forward.py  test_engine.py  test_exploit_blend.py  test_opponent_profiles.py  test_preflop_cfr.py  test_range_equity.py  test_street_reconstruct.py
tools/: ab_profiling.py  ab_tournament.py  bench_feed.py  eval_bb100.py  feature_parity_check.py  rep_field_test.py  tune_exploit.py
(+57 files in other folders)
